# primate

./: .cirrus.yml  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_TODO.md  _sidebar.yml  dagger.json  dagger.py  main.py  manylinux_ci.txt  meson.build  meson.options  more_itertools-10.1.0-py3-none-any.whl  package_diagram.html  package_diagram.md  primate-0.2.3-cp311-cp311-macosx_10_15_x86_64.whl  pyproject.toml  symbols.txt
.benchmarks/Darwin-CPython-3.11-64bit/: 0001_0de9f3e02a2891eefc31308d655f62a724933434_20231220_210021_uncommited-changes.json  0002_0de9f3e02a2891eefc31308d655f62a724933434_20231220_211224_uncommited-changes.json  0003_54faa2cb9db40851ee0164fd3472219444036606_20231221_162241_uncommited-changes.json  0004_1c69f233c7de9c8474dffe642ba0f6cb80e34d74_20231221_212832_uncommited-changes.json  0005_1c69f233c7de9c8474dffe642ba0f6cb80e34d74_20231221_214209_uncommited-changes.json
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/manylinux2014_x86_64/: devcontainer.json
.devcontainer/manylinux_2_28_x86_64/: devcontainer.json
.devcontainer/manylinux_x86_64/: devcontainer.json
.devcontainer/musllinux-x86_64/: devcontainer.json
.devcontainer/ubuntu-latest/: devcontainer.json
.devcontainer/windows/: devcontainer.json
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  wheels.yml
blas/: meson.build  write_openblas_pc.py
blas/.openblas/: scipy-openblas.pc
cmake_modules/: FindLAPACK.cmake
data/: challenge_1328_rank871.npz
docs/: _quarto.yml  _sidebar.yml  api.py  api_index.html  benchmarks.qmd  bokeh_cdn.html  custom.css  generate_api.py  imate_compare.html  imate_compare.qmd  index.html  index.qmd  install.html  install.qmd  integration.html  integration.qmd  objects.json  pybind11_integration.html  pybind11_integration.qmd  references.bib  search.json  table.html
docs/_site/: imate_compare.html  index.html  install.html  integration.html  pybind11_integration.html  quickstart.html  search.json  styles.css  table.html
docs/advanced/: cpp_integration.html  pybind11_integration.html  slq_param.html
docs/basic/: install.html  install.qmd  integration.html  integration.qmd  performance.html  quickstart.html  quickstart.qmd  quickstart.quarto_ipynb  todo.html  usage.html
docs/guide/: lanczos.html  sl_trace_ex.html  slq_guide.html
docs/guides/: intro_trace.html  intro_trace.qmd  matrix_functions.html  matrix_functions.qmd  numrank.html
docs/integration/: cpp_integration.html  pybind11_integration.html  python_integration.html  slq_guide.html
docs/reference/: ConfidenceCriterion.html  ConfidenceCriterion.qmd  ControlVariableEstimator.html  ConvergenceCriterion.html  ConvergenceCriterion.qmd  CountCriterion.html  Covariance.html  Estimator.html  Estimator.qmd  KneeCriterion.html  KneeCriterion.qmd  MatrixFunction.html  MatrixFunction.qmd  MeanEstimator.html  MeanEstimator.qmd  Toeplitz.html  Toeplitz.qmd  api_index.html  (+72 more)
examples/: lanczos.py  lanczos_pythran.cpp  lanczos_pythran.py  matrix_function.py  xtrace.py
include/: eigen_core.h  primate.h
notebooks/: bench_mf.py  bench_trace.py  cesm.py  control_variables.py  cython_testing.py  lanczos.py  plots.py  sparsifier.py  spectral_density.py  spectral_density_small.py
openmp/: meson.build
primate/: __init__.py  _diagonalize.cpp  _orthogonalize.cpp  _random.cpp  _random_gen.cpp  _random_generator.cpp  _trace.cpp  diagonalize.py  eigen_operators.h  meson.build  ortho.py  plotting.py  pylinops.h  random.py  trace.py
pyimate/: __init__.py  _diagonalize.cpp  _operators.cpp  _orthogonalize.cpp  _pylinearoperator.cpp  _random_generator.cpp  _sparse_eigen.cpp  _trace.cpp  diagonalize.py  eigen_operators.h  meson.build  pylinops.h  trace.py
pyimate/_c_trace_estimator/: c_trace_estimator.cpp  c_trace_estimator.h  convergence_tools.cpp  convergence_tools.h  special_functions.h
pyimate/_functions/: functions.cpp
pyimate/_operators/: _pylinearoperator.cpp
pyimate/functions/: __init__.py  _ridge.cpp  functions.h  meson.build
src/primate/: __init__.py  __version__.py  _diagonalize.cpp  _lanczos.cpp  _operators.cpp  _orthogonalize.cpp  _random_gen.cpp  _trace.cpp  _vapprox.cpp  diagonal.py  diagonalize.py  eigen_operators.h  estimators.py  functional.py  integrate.py  lanczos.c  lanczos.py  lanczos.pyx  linalg.py  meson.build  operator.py  operators.py  plotting.py  pylinop.h  quadrature.py  random.py  sparse.py  special.py  spectral_functions.h  stats.py  stochastic.py  tqli.py  trace.py  tridiag.py  typing.py
src/primate/include/: eigen_core.h
src/primate/include/_lanczos/: lanczos.h
src/primate/include/_operators/: linear_operator.h
src/primate/include/_random_generator/: random_concepts.h  rne_engines.h  threadedrng64.h
src/primate/include/_random_generator/_engines/: pcg64.h  split_mix64.h
src/primate/include/_trace/: hutch.h
src/primate2/: _lanczos.cpp  estimators.py  fttr.py  lanczos.py  meson.build  operators.py  quadrature.py  special.py  stats.py  tqli.py  tridiag.py
src/primate2/include/: eigen_operators.h  lanczos.h  omp_support.h  pylinop.h
tests/: __init__.py  bench_lanczos.py  benchmarks.py  download_mm.py  fttr.py  sanity.py  test_bench.py  test_density.py  test_diagonal.py  test_diagonalize.py  test_estimators.py  test_functional.py  test_hutchpp.py  test_import.py  test_init.py  test_lanczos.py  test_linalg.py  test_numrank.py  test_operator.py  test_operators.py  test_ortho.py  test_plotting.py  test_primate.py  test_pyimate.py  test_quadrature.py  test_random.py  test_slq.py  test_special.py  test_stats.py  test_tqli.py  test_trace.py  test_tridiagonal.py  test_vapprox.py  test_xtrace.py  tqli.py
todo/: .rendered.somecode.cpp  _call.cpp  _lapack.c  _lapack.h  _lapack.pyx  lowlevelcallable.py  matrix_function.py  openmp.py  parallel.cpp  rademacher_bias.py  run_parallel.py  somecode.cpp  toeplitz.py  up_laplacian.cpp  up_laplacian.py  valgrind_trace.py  winsorize.py
todo/blas/: meson.build
tools/: build_wheels.sh  cibw_linux.sh  cibw_macos.sh  cibw_windows.sh  repair_windows.sh
(+189 files in other folders)
