option('version', type : 'string', value : '0.1.4', description : 'project version')
option('blas', type: 'string', value: 'openblas', description: 'option for BLAS library switching')
option('lapack', type: 'string', value: 'openblas', description: 'option for LAPACK library switching')
# option('use_nanobind', type: 'boolean', value: false, description: 'whether to create the bindings with nanobind')
