[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy', 'pythran', 'pythran-openblas', 'pybind11', 'nanobind']
# requires = ['meson-python', 'numpy', 'pythran', 'pythran-openblas', 'pybind11']
# requires = ["setuptools >= 40.9.0",]
# build-backend = "setuptools.build_meta"


[project]
name = 'primate2'
version = '0.1.1'
description = 'Our example package using meson-python!'
readme = 'README.md'
requires-python = '>=3.8'
license = { text = "Apache License" }
authors = [{ name = 'Matt Piekenbrock', email = 'matt.piekenbrock@gmail.com' }]
# python -m build -Ccompile-args="-j6" . --no-isolation

# [tool.meson-python.args]
# setup = ['-DPYTHRANRC=.pythranrc']
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = ["tests"]
norecursedirs = ["docs", "*.egg-info", ".git"]